alignmenet issue fix

--- a/css/common.css
+++ b/css/common.css
@@ -56,7 +56,7 @@
   height: 50%;
   width: 68px;
   top: 0;
-  left: 10px;
+  /* left: 10px; */
   z-index: 1;
   transition: left 0.4s cubic-bezier(0.6, 0, 0.4, 1);
 
